--- a/myStyle.css
+++ b/myStyle.css
@@ -143,7 +143,6 @@ body {
 #my-lion {
 	height: auto;
 	width: 40%;
-	margin-left: 20%;
 	opacity: .7;
 	overflow: visible;
 }
@@ -654,6 +653,21 @@ section.project {
 	height: 40%;
 }
 
+.full-prj-img {
+	width: 100vw;
+	height: 100vh;
+	position: absolute;
+	top: 0; left: 0;
+	background-color: #e0dfdf;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	z-index: 0;
+	visibility: hidden;
+	transform: translateY(20%);
+	transform-origin: top;
+}
+
 .project-description {
 	width: 100%;
 	height: 60%;
@@ -708,12 +722,13 @@ section.project {
 /* Intro Section */
 
 #intro_text {
-	font-size: calc(3em + 4vw);
+	font-size: calc(3em + 6vw);
 	margin: 10px;
 	padding: 10px;
 	-ms-flex-item-align: end;
 	align-self: flex-end;
 	line-height: 1.2em;
+	cursor: default;
 }
 
 #home-CTAarrow {
@@ -754,20 +769,33 @@ section.project {
 	background-color: black;
 }
 
+#sa-homepage {
+	background-image: url("./Assets/HomePage 1440 Sync SA.jpg");
+	background-position: 0 0;
+}
+
 
 /* ------------------------------------------ Bardot Intro -------------------------------------------------------- */
 
 #prj-bardot {
 	background-image: url("./Assets/BardotCampaign(5).jpg");
+	background-position: 0 60%;
 }
+
+#bardot-homepage {
+	background-image: url("./Assets/D 1500 - Home bardot.jpg");
+	background-position: 0 0;
+}
+
 
 /* ------------------------------------------ More works section -------------------------------------------------------- */
 
 #more-works a {
 	font-size: 1.8em;
-	letter-spacing: .08em;
+	letter-spacing: .05em;
 	margin: 5% auto;
 	position: relative;
+	font-weight: 800;
 }
 	#more-works a:after {
 		content: "";
