--- a/myStyle.css
+++ b/myStyle.css
@@ -701,7 +701,6 @@ section.project {
 
 .project .prj-hero_img {
 	width: 50%; height: 100%;
-	background-color: blue;
 }
 
 
@@ -769,19 +768,21 @@ section.project {
 /* ------------------------------------------ Bardot Intro -------------------------------------------------------- */
 
 #prj-bardot .prj-hero_img {
-	background-image: url("./Assets/BardotCampaign(5).jpg");
+	background-image: url("./Assets/Bardot_HomeMockup");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 100%;
+	background-color: #f0f0f0;
 }
 
 /* ------------------------------------------ Radio Rentals Intro -------------------------------------------------------- */
 
 #prj-rr .prj-hero_img {
-	background-image: url("./Assets/rr-hero.jpg");
-	background-position: center;
+	background-image: url("./Assets/RR_HomeMockup.png");
+	background-position: bottom right;
 	background-repeat: no-repeat;
 	background-size: 100%;
+	background-color: black;
 }
 
 
