--- a/projectStyle.css
+++ b/projectStyle.css
@@ -389,10 +389,11 @@ section.challenge {
 .hero-img {
 	width: 100%;
 	height: 100%;
-	background-size: cover;
+	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
+	background-color: #c2e5cf;
 }
 
 
@@ -1415,14 +1416,19 @@ footer {
 				}
 
 
-
-
-
 .small-logos {
 	width: 200px;
 	height: auto;
 	margin: 25px;
 }
+
+
+
+/* ------------------------------------------- Heineken -------------------------------------------- */
+#heineken-hero-img {
+	background-image: url("./Assets/Heineken_PD_Hero.png");
+}
+
 
 
 
@@ -1708,10 +1714,11 @@ section#credits a {
 		height: auto;
 	}
 	.project-hero {
-		height: 40vh;
+		height: 30vh;
 	}
 	.hero-img {
 		background-attachment: scroll;
+		background-position: bottom;
 	}
 	.block {
 		width: 100%;
