--- a/projectStyle.css
+++ b/projectStyle.css
@@ -217,7 +217,6 @@ h2 {
 	font-size: calc(1.8em + 1vw);
 	letter-spacing: .03em;
 	font-weight: 800;
-	line-height: 1.6em;
 }
 
 .centered-text { text-align: center; }
@@ -352,9 +351,9 @@ section.challenge {
 	align-items: center;
 	justify-content: space-evenly;
 }
-		section h3 {
+		/* section h3 {
 			margin-bottom: calc(25px + 1%);
-		}
+		} */
 
 		.hiw-section h3 {
 			margin-bottom: 5%;
@@ -369,21 +368,7 @@ section.challenge {
 
 .project-hero {
 	width: 100vw;
-	height: 100%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	margin-bottom: 4%;
+	height: 60%;
 }
 
 .hero-img {
@@ -466,7 +451,7 @@ section.challenge {
 	flex-direction: column;
 	width: 40%;
 	height: auto;
-	margin: 5% auto;
+	margin: 2% auto;
 }
 .challenge .block {
 	margin: auto;
@@ -1429,6 +1414,12 @@ footer {
 	background-image: url("./Assets/Heineken_PD_Hero.png");
 }
 
+section#heineken-challenge {
+	background-color: #017C28;
+}
+	#heineken-challenge h3, #heineken-challenge p {
+		color: white;
+	}
 
 
 
@@ -1683,6 +1674,7 @@ section#credits a {
 			        flex-direction: row-reverse;
 		}
 }
+
 
 @media screen and (max-width: 1024px) {
 
